--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@emotion/core": "^10.0.10",
     "connected-react-router": "^6.4.0",
     "formik": "^1.5.4",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
+    "react-redux-loading-bar": "^4.2.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
     "redux": "^4.0.1",
